--- a/frontend/pyproject.toml
+++ b/frontend/pyproject.toml
@@ -3,9 +3,9 @@ requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "spacegame-cli"
+name = "mm-cli"
 version = "0.1.0"
-description = "Command-line interface for Spacegame"
+description = "Command-line interface for MonsterMakers"
 requires-python = ">=3.10"
 dependencies = [
     "click>=8.0",
@@ -13,7 +13,7 @@ dependencies = [
 ]
 
 [project.scripts]
-spacegame = "spacegame.cli:main"
+mm = "mm.cli:main"
 
 [tool.setuptools.packages.find]
 where = ["src"]
